fix: correct alignment issue in navbar

--- a/inventory-frontend/src/app/core/layout/layout.scss
+++ b/inventory-frontend/src/app/core/layout/layout.scss
@@ -5,36 +5,50 @@
 }
 
 .sidebar {
-  width: 250px;
+  width: 220px;
   background: #1f2937;
-  color: #ecf0f1;
-  display: flex;
+  color: white;
   padding: 20px;
 }
 
 .sidebar a {
-    display: block;
-    color: #ecf0f1;
-    text-decoration: none;
-    margin: 10px 0;
-    
+  display: block;
+  color: white;
+  text-decoration: none;
+  margin: 10px 0;
 }
 
 .main {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .navbar {
-    background: #2d3748;
-    color: #ecf0f1;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background: #2d3748;
+  padding: 10px;
+  text-align: right;
 }
 
-.contebt{
-    padding: 20px;
+.content {
+  padding: 20px;
+}
+
+button {
+  border: none;
+  outline: none;
+    
+
+  padding: 10px 15px;
+  background: #7e99c6;
+  
+  
+border-radius: 25px;
+  &:hover {
+   background: #4a576e;
+  }
+  &:focus {
+    box-shadow: 0 0 0 2px #4a5568;
+  }
+
 }
